compiler/testData/integration/ant/jvm/noReflectForJavac/build.log.expected
OUT:
Buildfile: [TestData]/build.xml

build:
    [mkdir] Created dir: [Temp]/classes
    [javac] Compiling 1 source file to [Temp]/classes
    [javac] Running javac...
    [javac] [TestData]/J.java:3: error: cannot find symbol
    [javac] import kotlin.reflect.KClassesKt;
    [javac]                      ^
    [javac]   symbol:   class KClassesKt
    [javac]   location: package kotlin.reflect
    [javac] 1 error

ERR:

BUILD FAILED
[TestData]/build.xml:6: Compile failed; see the compiler error output for details.

Total time: [time]

Return code: 1
